--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,7 +3,7 @@
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="com.sdc.sdcpermission.MainActivity">
     <item
-        android:id="@+id/action_miui"
+        android:id="@+id/action_third"
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never"/>
